# progNstu

./: CompleteBinaryTree  CompleteBinaryTree.cpp  hash  hash.cpp  hashtable.cpp  helloworld  helloworld.cpp  progNstu.code-workspace
ASVT/LR3/: graph1.py  lab1.cpp
ASVT/LR4/: graph2.py  lab1  lab2  lab2.cpp
GO/: mian.go
Lab1Sem3/: array.go  atd  cbtree.go  check.json  file.json  hashtable  hashtable.go  linkedlist.go  linkedlist.h  main  main.cpp  main.go  mainc.cpp  stack.go  stack.h
Lab1Sem3/legacy/: array.go
Lab2Sem3/1/: 1  1.go
Lab2Sem3/2/: 2  2.go  set.go  set.json
Lab2Sem3/3/: 3  3.go  set.go
Lab2Sem3/4/: 4.go
Lab2Sem3/6/: 6  6.go
Lab3Sem3/1/: coverage.html  main_test.go  test.json
Lab3Sem3/2/: 1  CMakeLists.txt
Lab3Sem3/2/src/: hashtable.gcno  main.gcno
Lab3Sem3/2/tests/: boost_test.cpp  boost_test.gcno
Lab4Sem3/: 1  1.cpp  2  2.cpp  3  3.cpp
Lab5Sem3/: main
Prac1Sem3/: DATABASE  linkedlist.h  main.go  menu  menu.cpp  scheme.json  tempCodeRunnerFile.go  test  test.go
Prac1Sem3/go/: main.go  scheme.json
Prac2Sem3/: hashtable.go  main.go  server  server.go
Prac2Sem3/client/: client  client.go
RGR/: шифры.txt
RGR/GO/: file.txt  gamma.go  go.mod  main  main.go
SEM2/LR5/: 1  1.cpp  2  2.cpp
SEM2/LR7/: 1  1.cpp  2
SEM2/lr7/: 1.cpp  2.cpp
SEM3/Lab1/: array.go  atd.json  check.json  queue.go
SEM3/Lab4/: 2  3.cpp
SEM3/Lab5/: main.cpp
SEM3/Prac1/: check_col.csv  db  schema.json
TIMP/LR1/: start.sh
TIMP/LR3/: docker-compose.yml
courseWork/learning-platform/: start.sh
legacy/: Diagram.wsd  pattern  pattern.cpp
(+206 files in other folders)
